  version of the standard, not the document, although documents will 
  only change in line with the standard.

- globally changed the @percentage attribute to allow decimals
  (e.g. "55.5" as well as "50")

- globally changed the @currency attribute to allow decimals
  (e.g. "99.99" as well as "99")

- added the optional country-budget-item element

** Organisations

- Version numbers now included in the document root. Versions match the
  version of the standard, not the document, although documents will 
  only change in line with the standard.

- globally changed the @currency attribute to allow decimals
  (e.g. "99.99" as well as "99")

** Common
- Version numbers now included in the document root. Versions match the
  version of the standard, not the document, although documents will 
  only change in line with the standard.

- Currency values are now allowed to be declared as decimals instead of 
  integers.

- Moved the @percentage attribute to common, so that it can be reused.
  
** Registry Record
- Version numbers now included in the document root. Versions match the
  version of the standard, not the document, although documents will 
  only change in line with the standard.
  
* 1.02beta (2012-11-23)

(See http://wiki.iatistandard.org/standard/revision/1.02/changes_specification)

[*] designates a backwards-incompatible change

- bumped version to 1.02 in preparation for 2012-12-17 release

** Activities

- [*] replaced document-link/@language with element document-link/language

- [*] changed type of iati-activity/@hierarchy from xsd:string to
  xsd:int

- introduced the optional iati-activities/@linked-data-default attribute

- introduced the optional iati-activity/@linked-data-uri attribute

** Organisations

- [*] replaced document-link/@language with element document-link/language


* Version 1.01

(These changes made it into the IATI 1.01 final release.)

- removed documentation references to obsolete draft of standard

** Activities
