@@ -1,0 +1,19 @@
+<?xml version="1.0"?>
+
+<iati-activities>
+  <iati-activity>
+    <iati-identifier>12345</iati-identifier>
+    <description>xxx</description>
+    <contact-info>
+      <organisation>XXX</organisation>
+      <person-name>XXX</person-name>
+      <job-title>YYY</job-title>
+      <telephone>123-456-789</telephone>
+      <email>XXX@example.org</email>
+      <mailing-address>
+        123 Street St.
+        Somewhere, UK
+      </mailing-address>
+    </contact-info>
+  </iati-activity>
+</iati-activities>
